cambios en carousel

--- a/contacto.html
+++ b/contacto.html
@@ -82,7 +82,12 @@
               Agendá tu Sesión
             </h1>
           </div>
-          <form class="input" action="" method="POST" alt="ingreso de datos">
+          <form
+            class="input"
+            action="https://formsubmit.co/castanaresdac@gmail.com"
+            method="POST"
+            alt="ingreso de datos"
+          >
             <div class="input-group">
               <input
                 class="input-text"
