--- a/tarot.html
+++ b/tarot.html
@@ -111,12 +111,12 @@ Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que c
       </div>
       </section>
       <div class="d-flex justify-content-center">
-        <a href="./contacto.html" class="btn btn-md btn-light button--style"
+        <a href="./contacto.html" class="btn btn-md btn-light button--style mb-lg-5"
         >Agendá tu Sesión</a
          >
       </div>
     </main>
-    <footer class="rrss-nav rrss-nav__tarot--position">
+    <footer class="rrss-nav mt-lg-5">
       <ul class="d-flex justify-content-evenly rrss-nav__list">
         <li>
           <a
