--- a/terapia-floral.html
+++ b/terapia-floral.html
@@ -115,19 +115,21 @@
           "
         >
           <img
-            src="./images/Flores.png"
-            class="img-fluid main-content__image"
+            src="./images/Terapia floral.jpg"
+            class="img-fluid main-content__image mb-md-3"
             alt="Terapia Floral"
           />
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="./contacto.html" class="btn btn-md btn-light button--style"
+        <a
+          href="./contacto.html"
+          class="btn btn-md btn-light button--style mb-md-3"
           >Agendá tu Sesión</a
         >
       </div>
     </main>
-    <footer class="rrss-nav">
+    <footer class="rrss-nav mt-md-5">
       <ul class="d-flex justify-content-evenly rrss-nav__list">
         <li>
           <a
