--- a/astrologia.html
+++ b/astrologia.html
@@ -61,23 +61,57 @@
   <main class="main-content justify-content-center">
         <h1 class="container d-flex justify-content-center main-content__title">Astrología</h1> 
       <div class="container flex-wrap d-flex justify-content-center main-content__text-container">
-        <p class="text-center text-light text-justify texto col-12 col-lg-6 main-content__text">
+        <p class="text-center text-light text-justify texto col-12 main-content__text">
             Nuestra Carta Natal es el mapa del cielo en el momento en que nacemos. <br>
             Cuanto más nos adentramos a investigarla, más podemos comprendernos y evolucionar. <br>
             Mi luna en Escorpio me llevó amar la Astrologia desde pequeña y hoy disfruto mucho de poder ayudar a otros a conocerse a través de la lectura de sus cartas natales. <br>
             Te invito a que calcules tu carta natal y me contactes para que puedas conocer todo eso que se oculta en tu ser.
       </p>
-      <div id="carouselExampleSlidesOnly" class="carousel slide col-12 col-lg-6 carrusel" data-bs-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="carousel-caption d-none d-md-block">
+            <img src="./images/carousel/fuego.jpg" class="d-block w-100 img-fluid" alt="...">
+            <div class="carousel-caption d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/carousel/tierra.jpg" class="d-block w-100 img-fluid" alt="...">
+            <div class="carousel-caption d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/carousel/aire.jpg" class="d-block w-100 img-fluid" alt="...">
+            <div class="carousel-caption d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/carousel/agua.jpg" class="d-block w-100 img-fluid" alt="...">
+            <div class="carousel-caption d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
           </div>
         </div>
-          <div class="carousel-item carousel__item--backgorund-img2">
-          </div>
-          <div class="carousel-item carousel__item--backgorund-img3">
-        </div>
-      </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
         <div class="d-flex flex-column col-12 align-items-center">
         <a href="https://www.astro.com/cgi/ade.cgi?ract=xx68747470733a2f2f7777772e617374726f2e636f6d2f6367692f63686172742e6367693f627479703d773267772672733d33267573656368707265663d31266c616e673d73&lang=s&rs=3&btyp=w2gw"
