--- a/astrologia.html
+++ b/astrologia.html
@@ -79,29 +79,33 @@
           <div class="carousel-item active">
             <img src="./images/carousel/fuego.jpg" class="d-block w-100 img-fluid" alt="...">
             <div class="carousel-caption d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Signos de Fuego</h5>
+              <h6>Aries-Leo-Sagitario</h6>
+              <p>Expansivxs, Pasionales y Espontanexs.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/carousel/tierra.jpg" class="d-block w-100 img-fluid" alt="...">
             <div class="carousel-caption d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Signos de Tierra</h5>
+              <h6>Taur-Virgo-Capricornio</h6>
+              <p>Sostenedores, Disciplinadxs y Obstinadxs.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/carousel/aire.jpg" class="d-block w-100 img-fluid" alt="...">
             <div class="carousel-caption d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Signos de Aire</h5>
+              <h6>Geminis-Libra-Acuario</h6>
+              <p>Analiticxs, Desapegadxs y Carismáticxs.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/carousel/agua.jpg" class="d-block w-100 img-fluid" alt="...">
             <div class="carousel-caption d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Signos de Agua</h5>
+              <h6>Cáncer-Escorpio-Piscis</h6>
+              <p>Receptivxs, Sensibles y Apegadxs.</p>
             </div>
           </div>
         </div>
