contacto en footer

--- a/contacto.html
+++ b/contacto.html
@@ -139,7 +139,7 @@
               id="mensaje"
               cols="20"
               rows="10"
-              placeholder="Escribi aca tu mensaje"
+              placeholder="Escribí acá tu mensaje"
             ></textarea>
             <div class="d-flex justify-content-center">
               <input
@@ -179,12 +179,25 @@
           </a>
         </li>
       </ul>
-      <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Contacto</li>
-        </ol>
-      </nav>
+      <div class="container d-flex">
+        <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Astrología
+            </li>
+          </ol>
+        </nav>
+        <div class="align-items-end">
+          <p class="copyright">
+            Hecho con <i class="far fa-heart"></i> por
+            <a href="https://github.com/DiegoCastanares" target="_blank"
+              >ArtuD2</a
+            >
+            WebDev
+          </p>
+        </div>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -199,6 +212,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/2846f3eb77.js"
       crossorigin="anonymous"
     ></script>
   </body>
