--- a/index.html
+++ b/index.html
@@ -78,14 +78,20 @@
     </header>
 
     <main class="index d-flex flex-column justify-content-center">
-      <h1 class="container d-flex justify-content-center main-content__title">
+      <h1
+        class="container d-flex justify-content-center main-content__title my-3"
+      >
         Astrotarot Evolutivo
       </h1>
-      <img src="./images/index-img.png" class="index__img" alt="fla bonelli" />
-      <h2 class="index__text">
+      <img
+        src="./images/index-img.png"
+        class="index__img my-2"
+        alt="fla bonelli"
+      />
+      <h2 class="index__text mt-4">
         "como es arriba es abajo, como es adentro es afuera"
       </h2>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center my-4">
         <a href="./contacto.html" class="btn btn-md btn-light button--style"
           >Agendá tu Sesión</a
         >
@@ -118,11 +124,25 @@
           </a>
         </li>
       </ul>
-      <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-      </nav>
+      <div class="container d-flex">
+        <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Astrología
+            </li>
+          </ol>
+        </nav>
+        <div class="align-items-end">
+          <p class="copyright">
+            Hecho con <i class="far fa-heart"></i> por
+            <a href="https://github.com/DiegoCastanares" target="_blank"
+              >ArtuD2</a
+            >
+            WebDev
+          </p>
+        </div>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -137,6 +157,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/2846f3eb77.js"
       crossorigin="anonymous"
     ></script>
   </body>
