--- a/terapia-floral.html
+++ b/terapia-floral.html
@@ -109,8 +109,8 @@
           Las flores trabajan sobre lo sutil y vibracional, no suprimen lo que
           sentís sino que ayudan a equilibrarlo y no reemplazan tratamientos
           médicos sino que los complementan. <br />
-          Te invito a que me contactes y puedas tener una sesión que te ayude al
-          autoconocimiento y reconocer que necesitas en este momento. <br />
+          Te invito a que me contactes y puedas tener una sesión que te ayude a
+          reconocer que necesitás en este momento. <br />
         </p>
         <div
           class="
@@ -162,14 +162,25 @@
           </a>
         </li>
       </ul>
-      <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">
-            Terapia Floral
-          </li>
-        </ol>
-      </nav>
+      <div class="container d-flex">
+        <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Astrología
+            </li>
+          </ol>
+        </nav>
+        <div class="align-items-end">
+          <p class="copyright">
+            Hecho con <i class="far fa-heart"></i> por
+            <a href="https://github.com/DiegoCastanares" target="_blank"
+              >ArtuD2</a
+            >
+            WebDev
+          </p>
+        </div>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -184,6 +195,10 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/2846f3eb77.js"
       crossorigin="anonymous"
     ></script>
   </body>
