--- a/astrologia.html
+++ b/astrologia.html
@@ -65,7 +65,7 @@
         <p class="text-center text-light text-justify texto col-12 main-content__text">
             Nuestra Carta Natal es el mapa del cielo en el momento en que nacemos. <br>
             Cuanto más nos adentramos a investigarla, más podemos comprendernos y evolucionar. <br>
-            Mi luna en Escorpio me llevó amar la Astrologia desde pequeña y hoy disfruto mucho de poder ayudar a otros a conocerse a través de la lectura de sus cartas natales. <br>
+            Mi luna en Escorpio me llevó amar la Astrologia desde pequeña y hoy disfruto mucho de poder ayudar a otrxs a conocerse a través de la lectura de sus cartas natales. <br>
             Te invito a que calcules tu carta natal y me contactes para que puedas conocer todo eso que se oculta en tu ser.
       </p>
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -78,7 +78,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./images/carousel/fuego.jpg" class="d-block w-100 img-fluid" alt="...">
-            <div class="carousel-caption d-md-block">
+            <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Fuego</h5>
               <h6>Aries-Leo-Sagitario</h6>
               <p>Expansivxs, Pasionales y Espontanexs.</p>
@@ -86,23 +86,23 @@
           </div>
           <div class="carousel-item">
             <img src="./images/carousel/tierra.jpg" class="d-block w-100 img-fluid" alt="...">
-            <div class="carousel-caption d-md-block">
+            <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Tierra</h5>
-              <h6>Taur-Virgo-Capricornio</h6>
+              <h6>Tauro-Virgo-Capricornio</h6>
               <p>Sostenedores, Disciplinadxs y Obstinadxs.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/carousel/aire.jpg" class="d-block w-100 img-fluid" alt="...">
-            <div class="carousel-caption d-md-block">
+            <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Aire</h5>
-              <h6>Geminis-Libra-Acuario</h6>
+              <h6>Géminis-Libra-Acuario</h6>
               <p>Analiticxs, Desapegadxs y Carismáticxs.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/carousel/agua.jpg" class="d-block w-100 img-fluid" alt="...">
-            <div class="carousel-caption d-md-block">
+            <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Agua</h5>
               <h6>Cáncer-Escorpio-Piscis</h6>
               <p>Receptivxs, Sensibles y Apegadxs.</p>
@@ -155,15 +155,21 @@
           </a>
         </li>
       </ul>
+      <div class="container d-flex">
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Astrología</li>
         </ol>
       </nav>
+      <div class="align-items-end">
+        <p class="copyright  ">Hecho con <i class="far fa-heart"></i> por <a href="https://github.com/DiegoCastanares" target="_blank">ArtuD2</a> WebDev</p>
+    </div>
+    </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2846f3eb77.js" crossorigin="anonymous"></script>
   </body>
 </html>
