--- a/cards/sol.html
+++ b/cards/sol.html
@@ -95,17 +95,21 @@
           </a>
         </li>
       </ul>
-      <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="../tarot.html">Tarot</a></li>
-          <li class="breadcrumb-item active" aria-current="page">El Sol</li>
-        </ol>
-      </nav>
+      <div class="container d-flex">
+        <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Astrología</li>
+          </ol>
+        </nav>
+        <div class="align-items-end">
+          <p class="copyright  ">Hecho con <i class="far fa-heart"></i> por <a href="https://github.com/DiegoCastanares" target="_blank">ArtuD2</a> WebDev</p>
+      </div>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/2846f3eb77.js" crossorigin="anonymous"></script>
   </body>
 </html>
