--- a/tarot.html
+++ b/tarot.html
@@ -64,10 +64,10 @@
       <div class="container flex-wrap d-flex justify-content-center main-content__text-container">
         <p class="text-center text-light text-justify texto col-12 col-lg-6 pt-lg-5 main-content__text">
 El Tarot es uno de los oráculos más antiguos que existen. <br>
-Se puede trabajar tanto de forma predictiva, como se hacía en la antigüedad, como de forma evolutiva que es lo que mas me gusta. <br>
-El Tarot Evolutivo apunta a leer las energias presentes y las opciones que tenemos para tomar. <br>
-Busca el crecimiento emocional, personal y espiritual de cada uno. Nos hace responsables de nuestras acciones y desiciones. <br>
-Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que contactes para que podamos hacer una lectura más profunda y te saques todas esas dudas que hoy tenes.
+Se puede trabajar de forma predictiva, como se hacía en la antigüedad, o de forma evolutiva que es lo que mas me gusta. <br>
+El Tarot Evolutivo apunta a leer las energías presentes y las opciones que tenemos para tomar. <br>
+Busca el crecimiento emocional, personal y espiritual de cada unx. Nos hace responsables de nuestras acciones y desiciones. <br>
+Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que me contactes para que podamos hacer una lectura más profunda y te saques todas esas dudas que hoy tenés.
       </p>
         <div class="fluid-container select-card col-12 col-md-6 align-items-center d-flex justify-content-center">
           <h6 class="select-card__title main-content__title">
@@ -144,15 +144,22 @@ Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que c
           </a>
         </li>
       </ul>
-      <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Tarot</li>
-        </ol>
-      </nav>
+      <div class="container d-flex">
+        <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Astrología</li>
+          </ol>
+        </nav>
+        <div class="align-items-end">
+          <p class="copyright  ">Hecho con <i class="far fa-heart"></i> por <a href="https://github.com/DiegoCastanares" target="_blank">ArtuD2</a> WebDev</p>
+
+      </div>
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2846f3eb77.js" crossorigin="anonymous"></script>
   </body>
 </html>
