--- a/tarot.html
+++ b/tarot.html
@@ -148,12 +148,11 @@ Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que m
         <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Astrología</li>
+            <li class="breadcrumb-item active" aria-current="page">Tarot</li>
           </ol>
         </nav>
         <div class="align-items-end">
           <p class="copyright  ">Hecho con <i class="far fa-heart"></i> por <a href="https://github.com/DiegoCastanares" target="_blank">ArtuD2</a> WebDev</p>
-
       </div>
       </div>
     </footer>
