--- a/cards/fuerza.html
+++ b/cards/fuerza.html
@@ -98,8 +98,9 @@
       <div class="container d-flex">
         <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Astrología</li>
+            <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="../tarot.html">Tarot</a></li>
+            <li class="breadcrumb-item active" aria-current="page">La Fuerza</li>
           </ol>
         </nav>
         <div class="align-items-end">
