--- a/contacto.html
+++ b/contacto.html
@@ -183,9 +183,7 @@
         <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">
-              Astrología
-            </li>
+            <li class="breadcrumb-item active" aria-current="page">Contacto</li>
           </ol>
         </nav>
         <div class="align-items-end">
