--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
       <div class="container d-flex">
         <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">
-              Astrología
-            </li>
+            <li class="breadcrumb-item active" aria-current="page">Home</li>
           </ol>
         </nav>
         <div class="align-items-end">
