--- a/terapia-floral.html
+++ b/terapia-floral.html
@@ -167,7 +167,7 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">
-              Astrología
+              Terapia Floral
             </li>
           </ol>
         </nav>
