--- a/astrologia.html
+++ b/astrologia.html
@@ -77,7 +77,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/carousel/fuego.jpg" class="d-block w-100 img-fluid" alt="...">
+            <img src="./images/carousel/fuego.jpg" class="d-block w-100 img-fluid" alt="Elemento Fuego">
             <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Fuego</h5>
               <h6>Aries-Leo-Sagitario</h6>
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/carousel/tierra.jpg" class="d-block w-100 img-fluid" alt="...">
+            <img src="./images/carousel/tierra.jpg" class="d-block w-100 img-fluid" alt="Elemento Tierra">
             <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Tierra</h5>
               <h6>Tauro-Virgo-Capricornio</h6>
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/carousel/aire.jpg" class="d-block w-100 img-fluid" alt="...">
+            <img src="./images/carousel/aire.jpg" class="d-block w-100 img-fluid" alt="Elemento Aire">
             <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Aire</h5>
               <h6>Géminis-Libra-Acuario</h6>
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/carousel/agua.jpg" class="d-block w-100 img-fluid" alt="...">
+            <img src="./images/carousel/agua.jpg" class="d-block w-100 img-fluid" alt="Elemento Agua">
             <div class="carousel-caption d-md-block carousel-text">
               <h5>Signos de Agua</h5>
               <h6>Cáncer-Escorpio-Piscis</h6>
